--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none" style="font-weight: bolder;">Utkarsh Raj</span>
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpeg" alt="Profile Image">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile1.jpg" alt="Profile Image">
         </span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -115,11 +115,11 @@
                 <span class="creative" style="padding-left: 10px;"></span><span class="typed-cursor"></span>
             </div>
 
-          <p class="mb-5">Hey there! I am a third year Computer and Communication Engineering undergrad at Manipal Institute of Technology.
-              I'm a self-trained Stack Developer, with proficiency in Single Page Web App
-              Development and good experience in developing RESTful APIs using NodeJS.</p>
+          <p class="mb-5">Hey there! I am a Software Engineer currently working at Citrix. I have done my B.Tech undergraduate from Manipal Institute of Technology.
+              I'm a Full Stack Developer, with proficiency in Single Page Web App
+              Development and good experience in developing RESTful APIs and Apps using NodeJS.</p>
           <ul class="list-inline list-social-icons mb-0">
-            <li class="list-inline-item fb">
+            <!-- <li class="list-inline-item fb">
               <a href="https://www.facebook.com/utkarsh3012" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
@@ -134,9 +134,9 @@
                   <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
-            </li>
+            </li> -->
             <li class="list-inline-item linkin">
-              <a href="#">
+              <a href="https://www.linkedin.com/in/utkarsh3012">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -164,7 +164,7 @@
               <h3 class="mb-0">Manipal Institute Of Technology</h3>
               <div class="subheading mb-3">Manipal · Karnataka · India </div>
               <div>Computer and Communication Engineering</div>
-               <p>CGPA: 7.98</p>
+               <p>CGPA: 7.81</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2016 - May 2020</span>
@@ -207,12 +207,15 @@
 
             <div class="subheading mb-3">Programming Languages &amp; Tools</div>
             <ul class="list-inline list-icons">
+              <li class="list-inline-item">
+                <i class="devicon-javascript-plain colored" data-toggle="tooltip" title="JavaScript" data-placement="bottom"></i>
+              </li>
                 <li class="list-inline-item">
                     <i class="devicon-java-plain colored" data-toggle="tooltip" title="Java" data-placement="bottom"></i>
                 </li>
-                <li class="list-inline-item">
+                <!-- <li class="list-inline-item">
                   <i class="devicon-cplusplus-plain colored" data-toggle="tooltip" title="C++" data-placement="bottom"></i>
-              </li>
+              </li> -->
               <li class="list-inline-item">
                 <i class="devicon-python-plain colored" data-toggle="tooltip" title="Python" data-placement="bottom"></i>
             </li>
@@ -222,17 +225,20 @@
                 <li class="list-inline-item">
                     <i class="devicon-css3-plain colored" data-toggle="tooltip" title="CSS3" data-placement="bottom"></i>
                 </li>
-                <li class="list-inline-item">
+                <!-- <li class="list-inline-item">
                     <i class="devicon-bootstrap-plain colored" data-toggle="tooltip" title="Bootstrap" data-placement="bottom"></i>
+                </li> -->
+                <li class="list-inline-item">
+                  <i class="devicon-nodejs-plain colored" data-toggle="tooltip" title="NodeJS" data-placement="bottom"></i>
                 </li>
                 <li class="list-inline-item">
-                    <i class="devicon-javascript-plain colored" data-toggle="tooltip" title="JavaScript" data-placement="bottom"></i>
+                  <i class="devicon-vuejs-plain colored" data-toggle="tooltip" title="NodeJS" data-placement="bottom"></i>
                 </li>
                 <li class="list-inline-item">
                     <i class="devicon-angularjs-plain colored" data-toggle="tooltip" title="Angular" data-placement="bottom"></i>
                 </li>
                 <li class="list-inline-item">
-                    <i class="devicon-nodejs-plain colored" data-toggle="tooltip" title="NodeJS" data-placement="bottom"></i>
+                  <i class="devicon-mysql-plain colored" data-toggle="tooltip" title="MongoDB" data-placement="bottom"></i>
                 </li>
                 <li class="list-inline-item">
                     <i class="devicon-mongodb-plain colored" data-toggle="tooltip" title="MongoDB" data-placement="bottom"></i>
@@ -247,6 +253,16 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Work Experience</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Software Engineer 1</h3>
+              <div class="subheading mb-3">Citrix</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">January 2020 - Present</span>
+            </div>
+          </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
@@ -284,7 +300,7 @@
               <div class="subheading mb-3">LUGM (Linux Users’ Group, Manipal)</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">January 2018 - Present</span>
+              <span class="text-primary">January 2018 - May 2019</span>
             </div>
           </div>
 
@@ -303,12 +319,12 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="contact">
         <div class="my-auto">
           <h2 class="mb-5">Contact</h2>
-            <div class="subheading mb-5">Manipal · Karnataka, India 576104 ·
+            <div class="subheading mb-5">Bangalore · Karnataka, India 560034 ·
             <a href="mailto:name@email.com">utkarsh3012@gmail.com</a>
             </div>
             <div><i class="material-icons" style="vertical-align: middle">phone</i>&nbsp; +91- 8586897126</div>
             <div><i class="material-icons" style="vertical-align: middle">email</i>&nbsp; utkarsh3012@gmail.com</div>
-            <div style="padding-left: 25px">&nbsp;   utkarsh.raj@learner.manipal.edu</div>
+            <div style="padding-left: 25px">&nbsp;   utkarsh.raj@outlook.in</div>
         </div>
       </section>
     </div>
