--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Marck+Script" rel="stylesheet">
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="vendor/devicons/css/devicons.min.css">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <!-- <link rel="stylesheet" href="vendor/devicons/css/devicons.min.css"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -194,15 +194,15 @@
                 <li>
                     <i class="fa-li fa fa-chevron-right"></i>
                     Web Development</li>
+                  <li>
+                    <i class="fa-li fa fa-chevron-right"></i>
+                    API Development</li>
                 <li>
                     <i class="fa-li fa fa-chevron-right"></i>
                     Object Oriented Programming</li>
                 <li>
                     <i class="fa-li fa fa-chevron-right"></i>
-                    Cross-Platform App Development</li>
-                <li>
-                    <i class="fa-li fa fa-chevron-right"></i>
-                    Micro-Controller Programming</li>
+                    Preferred OS: MacOS, Linux</li>
             </ul>
 
             <div class="subheading mb-3">Programming Languages &amp; Tools</div>
@@ -232,19 +232,22 @@
                   <i class="devicon-nodejs-plain colored" data-toggle="tooltip" title="NodeJS" data-placement="bottom"></i>
                 </li>
                 <li class="list-inline-item">
-                  <i class="devicon-vuejs-plain colored" data-toggle="tooltip" title="NodeJS" data-placement="bottom"></i>
+                  <i class="devicon-vuejs-plain colored" data-toggle="tooltip" title="Vue JS" data-placement="bottom"></i>
                 </li>
                 <li class="list-inline-item">
-                    <i class="devicon-angularjs-plain colored" data-toggle="tooltip" title="Angular" data-placement="bottom"></i>
+                    <i class="devicon-react-original colored" data-toggle="tooltip" title="React" data-placement="bottom"></i>
                 </li>
                 <li class="list-inline-item">
-                  <i class="devicon-mysql-plain colored" data-toggle="tooltip" title="MongoDB" data-placement="bottom"></i>
+                  <i class="devicon-mysql-plain colored" data-toggle="tooltip" title="MySQL" data-placement="bottom"></i>
                 </li>
                 <li class="list-inline-item">
                     <i class="devicon-mongodb-plain colored" data-toggle="tooltip" title="MongoDB" data-placement="bottom"></i>
                 </li>
                 <li class="list-inline-item">
-                    <i class="devicons devicons-ionic" data-toggle="tooltip" title="Ionic" data-placement="bottom" style="color:#4e8ef7; font-size:110%"></i>
+                  <i class="devicon-graphql-plain colored" data-toggle="tooltip" title="GraphQL" data-placement="bottom"></i>
+              </li>
+                <li class="list-inline-item">
+                    <i class="devicon-ionic-original colored" data-toggle="tooltip" title="Ionic" data-placement="bottom"></i>
                 </li>
             </ul>
         </div>
