--- a/index.html
+++ b/index.html
@@ -259,11 +259,22 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
+              <h3 class="mb-0">Software Engineer 2</h3>
+              <div class="subheading mb-3">Citrix</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">March 2022 - Present</span>
+            </div>
+          </div>
+          
+          
+          <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
               <h3 class="mb-0">Software Engineer 1</h3>
               <div class="subheading mb-3">Citrix</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">January 2020 - Present</span>
+              <span class="text-primary">January 2020 - February 2022</span>
             </div>
           </div>
 
@@ -287,7 +298,7 @@
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row">
+<!--           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Thrust MIT</h3>
               <div class="subheading mb-3">Task Phase</div>
@@ -305,7 +316,7 @@
             <div class="resume-date text-md-right">
               <span class="text-primary">January 2018 - May 2019</span>
             </div>
-          </div>
+          </div> -->
 
         </div>
       </section>
